# DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3

./: CMakeLists.txt  DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3.json.in  README.md  deepseeknavigationchat.cpp  deepseeknavigationchat.h  deepseekoptionspage.cpp  deepseekoptionspage.h  deepseekoptionspage.ui  deepseekplugin_qtcreator16_0_1_qt6_8_3.cpp  deepseekplugin_qtcreator16_0_1_qt6_8_3constants.h  deepseekplugin_qtcreator16_0_1_qt6_8_3tr.h  deepseeksettings.cpp  deepseeksettings.h  resources.qrc  singleton.h
.github/workflows/: build_cmake.yml
